src/main/default/objects/CartItem/fields/DR_Billing_Agreement_Id__c.field-meta.xml
<CustomField>
    <fullName>DR_Billing_Agreement_Id__c</fullName>
    <description>The Digital River billing agreement identifier. This value needs to be sent to Digital River during recurring payment processing.</description>
    <inlineHelpText>The Digital River billing agreement identifier. This value needs to be sent to Digital River during recurring payment processing.</inlineHelpText>
    <label>Digital River Billing Agreement Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>