src/main/default/objects/CartItem/fields/DR_Cart_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>DR_Cart_Item_Id__c</fullName>
    <label>DR Cart Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>