src/main/default/objects/CartItem/fields/DR_Duty__c.field-meta.xml
<CustomField>
    <fullName>DR_Duty__c</fullName>
    <description>Indicates the total amount of duty levied by the importing country for this Line Item.</description>
    <inlineHelpText>Indicates the total amount of duty levied by the importing country for this Line Item.</inlineHelpText>
    <label>DR Duty</label>
    <summarizedField>CartTax.DR_Duty__c</summarizedField>
    <summaryForeignKey>CartTax.CartItemId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>