src/main/default/objects/CartItem/fields/DR_IOR_Tax__c.field-meta.xml
<CustomField>
    <fullName>DR_IOR_Tax__c</fullName>
    <description>Represents how much taxes the importer of record remits to the government for this Line Item.</description>
    <inlineHelpText>Represents how much taxes the importer of record remits to the government for this Line Item.</inlineHelpText>
    <label>DR IOR Tax</label>
    <summarizedField>CartTax.DR_IOR_Tax__c</summarizedField>
    <summaryForeignKey>CartTax.CartItemId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>