src/main/default/objects/CartItem/fields/DR_Item_TaxType__c.field-meta.xml
<CustomField>
    <fullName>DR_Item_TaxType__c</fullName>
    <description>The type of products stored in the Cart: Non-Digital, Digital</description>
    <inlineHelpText>The type of products stored in the Cart: Non-Digital, Digital</inlineHelpText>
    <label>DR Item TaxType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Non-Digital</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>