src/main/default/objects/CartItem/fields/DR_Regulatory_Fee__c.field-meta.xml
<CustomField>
    <fullName>DR_Regulatory_Fee__c</fullName>
    <description>Regulatory Fees collected to address the manufacture, use, recovery, and recycling of Consumer Electronics products throughout the world.</description>
    <inlineHelpText>Regulatory Fees collected to address the manufacture, use, recovery, and recycling of Consumer Electronics products throughout the world.</inlineHelpText>
    <label>DR Regulatory Fee</label>
    <summarizedField>CartTax.DR_Regulatory_Fee__c</summarizedField>
    <summaryForeignKey>CartTax.CartItemId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>