src/main/default/objects/CartItem/fields/Free_Subscription_Trial__c.field-meta.xml
<CustomField>
    <fullName>Free_Subscription_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Subscription Trial</label>
    <type>Checkbox</type>
</CustomField>