src/main/default/objects/CartItem/fields/Price_Includes_DR_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Price_Includes_DR_Surcharge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, Indicates that the Total Price field on Cart Item has Landed Costs and Regulatory Fees Included</description>
    <inlineHelpText>If TRUE, Indicates that the Total Price field on Cart Item has Landed Costs and Regulatory Fees Included</inlineHelpText>
    <label>Price Includes DR Surcharge</label>
    <type>Checkbox</type>
</CustomField>