src/main/default/objects/CartItem/fields/Recurring_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Line_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this Line Item contains a Subscription Product</description>
    <inlineHelpText>Indicates if this Line Item contains a Subscription Product</inlineHelpText>
    <label>Recurring Line Item</label>
    <type>Checkbox</type>
</CustomField>