src/main/default/objects/CartItem/fields/ShipFrom_City__c.field-meta.xml
<CustomField >
    <fullName>ShipFrom_City__c</fullName>
    <description></description>
    <inlineHelpText></inlineHelpText>
    <label>ShipFrom City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>