src/main/default/objects/CartItem/fields/ShipFrom_Postal_code__c.field-meta.xml
<CustomField >
    <fullName>ShipFrom_Postal_code__c</fullName>
    <description></description>
    <inlineHelpText></inlineHelpText>
    <label>ShipFrom Postal code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>