src/main/default/objects/CartItem/fields/ShipFrom_Street__c.field-meta.xml
<CustomField >
    <fullName>ShipFrom_Street__c</fullName>
    <description></description>
    <inlineHelpText></inlineHelpText>
    <label>ShipFrom Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>