src/main/default/objects/CartItem/fields/Subscription_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Subscription_End_Time__c</fullName>
    <label>Subscription End Time</label>
    <type>DateTime</type>
</CustomField>