src/main/default/objects/CartItem/fields/Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Id__c</fullName>
    <description>The Subscription Identifier specified by the Client</description>
    <inlineHelpText>The Subscription Identifier specified by the Client</inlineHelpText>
    <label>Subscription Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>