src/main/default/objects/CartItem/fields/Subscription_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Start_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Subscription Start Time</label>
    <type>DateTime</type>
</CustomField>