src/main/default/objects/CartItem/fields/Total_DR_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Total_DR_Surcharge__c</fullName>
    <description>Total DR Surcharge: Landed Costs + Regulatory Fees</description>
    <formula>DR_Duty__c + DR_IOR_Tax__c + DR_Regulatory_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total DR Surcharge: Landed Costs + Regulatory Fees</inlineHelpText>
    <label>Total DR Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>