src/main/default/objects/CartItem/fields/Total_Price_Excluding_DR_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Excluding_DR_Surcharge__c</fullName>
    <description>Total Price for this Cart Item before Adding Landed Costs and Regulatory Fees</description>
    <inlineHelpText>Total Price for this Cart Item before Adding Landed Costs and Regulatory Fees</inlineHelpText>
    <label>Total Price Excluding DR Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>